    checking, while in the case of gdk pixbufs, the last file wins.  What
    remains to be done here is:
    - biarch support, similar to pango, by loading /usr/lib32 and /usr/lib64
      stuff before /usr/lib; allows dropping the config file hack in
      ia32-libs.
    - loading of modules from multiarch locations (not multiarch); allows
      dropping the config file hack in ia32-libs.

 -- Loic Minier <lool@dooz.org>  Thu, 17 Apr 2008 12:34:24 +0200

gtk+2.0 (2.12.9-3) unstable; urgency=low

  [ Loic Minier ]
  * Refresh patches 009_gtk-export-filechooser,
    030_gtkentry_password-char-circle, 033_treeview_resizing,
    042_treeview_single-focus, 060_ignore-random-icons
  * Fix offsets in patch 095_gtk-im-module-setting; thanks Akira TAGOH;
    closes: #473699.

  [ Sebastian Dröge ]
  * debian/rules:
    + Don't include the udeb in the debug package to get a working debug
      package in case the udeb libraries differ from the real ones.

 -- Sebastian Dröge <slomo@debian.org>  Sat, 12 Apr 2008 14:00:22 +0200

gtk+2.0 (2.12.9-2) unstable; urgency=low

  * debian/patches/092_implicit-g-fopen.patch:
    + Include glib/gstdio.h for g_fopen to prevent crashes on 64 bit
      architectures. Thanks to Dann Frazier for the patch (Closes: #470665).

 -- Sebastian Dröge <slomo@debian.org>  Wed, 12 Mar 2008 18:52:53 +0100

gtk+2.0 (2.12.9-1) unstable; urgency=low

  [ Josselin Mouette ]
  * update-icon-caches: always exit with a 0 code to avoid breaking 
    upgrades when a cache is corrupt. Display a big fat warning instead.
    Closes: #466083.

  [ Sebastian Dröge ]
  * New upstream bugfix release:
    + 092_recentfiles-recursion-fix, dropped merged upstream.
    + 070_mandatory-relibtoolize.patch, regenerated for the new version.
  * debian/rules,
    debian/*.links.in:
    + Don't ship very old upstream changelogs and news as they're quite large.

 -- Sebastian Dröge <slomo@debian.org>  Wed, 12 Mar 2008 09:41:23 +0100

gtk+2.0 (2.12.8-1) unstable; urgency=low
