@@ -10,18 +10,18 @@ Build-Depends: debhelper (>= 5.0.22),
                libpango1.0-dev (>= 1.17.3),
                libatk1.0-dev (>= 1.9.0),
                libx11-dev (>= 2:1.0.0-6),
-               libxext-dev,
-               libxi-dev,
-               libxrandr-dev,
+               libxext-dev (>= 1:1.0.1-2),
+               libxi-dev (>= 1:1.0.1-4),
+               libxrandr-dev (>= 1:1.0.2-2),
                libxt-dev,
                libxrender-dev,
                libxft-dev,
                libxcursor-dev,
-               libxcomposite-dev,
-               libxdamage-dev,
+               libxcomposite-dev (>= 1:0.2.0-3),
+               libxdamage-dev (>= 1:1.0.1-3),
                libxkbfile-dev,
-               libxinerama-dev,
-               libxfixes-dev,
+               libxinerama-dev (>= 1:1.0.1-4.1),
+               libxfixes-dev (>= 1:3.0.0-3),
                libcairo2-dev (>= 1.2.0),
                libcairo-directfb2-dev (>= 1.2.4-4),
                libtiff4-dev,
@@ -192,14 +192,14 @@ Depends: libgtk2.0-0 (= ${binary:Version}),
          libatk1.0-dev (>= 1.6.1-2),
          libcairo2-dev,
          libx11-dev (>= 2:1.0.0-6),
-         libxext-dev,
-         libxinerama-dev,
-         libxi-dev,
-         libxrandr-dev,
+         libxext-dev (>= 1:1.0.1-2),
+         libxinerama-dev (>= 1:1.0.1-4.1),
+         libxi-dev (>= 1:1.0.1-4),
+         libxrandr-dev (>= 1:1.0.2-2),
          libxcursor-dev,
-         libxfixes-dev,
-         libxcomposite-dev,
-         libxdamage-dev,
+         libxfixes-dev (>= 1:3.0.0-3),
+         libxcomposite-dev (>= 1:0.2.0-3),
+         libxdamage-dev (>= 1:1.0.1-3),
          pkg-config
 Recommends: python (>= 2.4)
 Suggests: libgtk2.0-doc
