@@ -13,6 +13,12 @@ gtk+2.0 (2.12.9-4) UNRELEASED; urgency=low
       ia32-libs.
     - loading of modules from multiarch locations (not multiarch); allows
       dropping the config file hack in ia32-libs.
+  * Bump build-deps and libgtk2.0-dev's deps to ensure we get Xorg dev
+    packages with .pc files, see list below; thanks Anon Sricharoenchai;
+    closes: #370693.
+        libxext-dev >= 1:1.0.1-2, libxinerama-dev >= 1:1.0.1-4.1, libxi-dev >=
+        1:1.0.1-4, libxrandr-dev >= 1:1.0.2-2, libxfixes-dev >= 1:3.0.0-3,
+        libxcomposite-dev >= 1:0.2.0-3, libxdamage-dev >= 1:1.0.1-3.
 
  -- Loic Minier <lool@dooz.org>  Thu, 17 Apr 2008 12:34:24 +0200
 
